--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "bootstrap-icons": "^1.11.3",
     "bootstrap5": "^1.1.9",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.4",
+    "react-bootstrap": "^2.10.5",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5",
