--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap-icons": "^1.11.3",
     "bootstrap5": "^1.1.9",
     "date-fns": "^4.1.0",
+    "razorpay": "^2.9.6",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-datepicker": "^7.4.0",
